recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: type mismatch;
 found   : Double
 required: Int
	current(e)
                ^