recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var e = (length/shrink)

	
	
	tree(steps, length, angle, shrink) 
	e = Math.floor(e/shrink)
	current(e)
	


	

	
	
	
}
